--- a/src/app/topics/topic-detail/topic-detail.component.html
+++ b/src/app/topics/topic-detail/topic-detail.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="panel-body">
       <app-product-item
-        *ngFor="let i of products;"
+        *ngFor="let i of products"
         [product]="i"
         [isOntopic]="true"
       ></app-product-item>
