--- a/src/app/topics/topic-detail/product-item/product-item.component.html
+++ b/src/app/topics/topic-detail/product-item/product-item.component.html
@@ -9,7 +9,7 @@
     </a>
   </div>
   <button class="btn btn-success"
-          *ngIf="isOntopic"
+          *ngIf="isAdminLogin && !isFromStartPage"
           (click)="onEdit()">Eidt</button>
 </div>
 
