--- a/src/app/topics/topic-list/topic-list.component.html
+++ b/src/app/topics/topic-list/topic-list.component.html
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
@@ -13,7 +12,9 @@
 
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success" (click)="onNewTopic()">New Topic</button>
+    <button class="btn btn-success"
+            *ngIf="isAdminLogin"
+            (click)="onNewTopic()">New Topic</button>
   </div>
 </div>
 
