--- a/src/app/topics/topic-detail/product-edit/product-edit.component.html
+++ b/src/app/topics/topic-detail/product-edit/product-edit.component.html
@@ -23,6 +23,21 @@
         <div class="row">
           <div class="col-xs-4">
             <div class="form-group">
+              <label for="tid">Product Id</label>
+              <input
+                type="number"
+                id="id"
+                formControlName="id"
+                class="form-control"
+              />
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="col-xs-4">
+            <div class="form-group">
               <label for="tid">Tid</label>
               <input
                 type="number"
