--- a/src/app/topics/topic-edit/topic-edit.component.html
+++ b/src/app/topics/topic-edit/topic-edit.component.html
@@ -25,6 +25,20 @@
         <div class="row">
           <div class="col-xs-4">
             <div class="form-group">
+              <label for="name">Topic Id</label>
+              <input
+                type="text"
+                id="id"
+                formControlName="id"
+                class="form-control"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-4">
+            <div class="form-group">
               <label for="name">Topic Name</label>
               <input
                 type="text"
