--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,10 @@
     </div>
   </div>
 </div>
+
+
+<footer class="panel-footer navbar-fixed-bottom">
+  <div class="container">
+    <p>&copy; Company 2019</p>
+  </div>
+</footer>
