--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/topic">Topic</a></li>
+        <li routerLinkActive="active"><a routerLink="/topic">Topics</a></li>
         <!--<li *ngIf="isAuthenticated">
           <a style="cursor: pointer;" (click)="checkLogin()">checkLogin</a>
         </li>-->
@@ -13,8 +13,7 @@
 
       <form class="navbar-form navbar-right"
             #authForm="ngForm"
-            (ngSubmit)="onSearch(authForm)"
-            *ngIf="!isLoading">
+            (ngSubmit)="onSearch(authForm)">
         <div class="form-group">
           <input type="text"
                  class="form-control"
