--- a/src/app/topics/topic-detail/product-item/product-item.component.html
+++ b/src/app/topics/topic-detail/product-item/product-item.component.html
@@ -1,11 +1,20 @@
-<div class="col-xs-6 col-md-3" >
+<div id="div1" class="col-xs-6 col-md-3" >
   <div class="caption"
        [routerLink]="['/product/',product.id]"
        routerLinkActive="active"
-       style="cursor: pointer">
-    <a  class="thumbnail module">
-      <h2>{{ product.name }}</h2>
-      <p>{{ product.description }}</p>
+       style="cursor: pointer;">
+    <a  class="thumbnail module" style="border-radius:15px; background-color: #dff0d8">
+      <span class="pull-right">
+        <img
+          [src]="product.thumbnail"
+          alt="{{ product.name }}"
+          class="img-responsive"
+          style="max-height: 40px;">
+      </span>
+      <!--<div class="pull-left">-->
+        <h3 class="list-group-item-heading">{{ product.name }}</h3>
+        <p class="">{{ product.description }}</p>
+      <!--</div>-->
     </a>
   </div>
   <button class="btn btn-success"
