--- a/src/app/topics/topic-detail/topic-detail.component.html
+++ b/src/app/topics/topic-detail/topic-detail.component.html
@@ -1,13 +1,18 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div id="head">
-      <p>{{ topic.name }}</p>
-      <button class="btn btn-success"
-              *ngIf="isAdminLogin"
-              (click)="onClick()">Eidt</button>
+      <div style="float: left; color: #428BCA">
+        <span class="glyphicon glyphicon-list"></span>
+        <span style="color: black">  {{ topic.name }}</span>
+      </div>
+      <div style="float: right">
+        <button class="btn btn-success"
+                   *ngIf="isAdminLogin"
+                   (click)="onClick()">Eidt</button>
+      </div>
     </div>
-
   </div>
+
   <div class="panel-body">
       <app-product-item
         *ngFor="let i of products"
