--- a/src/app/topics/topic-list/topic-item/topic-item.component.html
+++ b/src/app/topics/topic-list/topic-item/topic-item.component.html
@@ -1,8 +1,6 @@
 <a
    style="cursor: pointer"
    [routerLink]="[topic.id]"
-   routerLinkActive="active"
-   class="list-group-item">
-  <p class="list-group-item-text">{{ topic.name }}</p>
+   routerLinkActive="active">{{ topic.name }}
 </a>
 
