--- a/src/app/topics/topic-detail/product-edit/product-edit.component.html
+++ b/src/app/topics/topic-detail/product-edit/product-edit.component.html
@@ -16,7 +16,7 @@
             <button type="button"
                     class="btn btn-danger"
                     (click)="onDelete()"
-            >Delte</button>
+            >Delete</button>
           </div>
         </div>
 
