--- a/src/app/topics/topic-detail/topic-detail.component.html
+++ b/src/app/topics/topic-detail/topic-detail.component.html
@@ -8,7 +8,7 @@
       <div style="float: right">
         <button class="btn btn-success"
                    *ngIf="isAdminLogin"
-                   (click)="onClick()">Eidt</button>
+                   (click)="onClick()">Edit</button>
       </div>
     </div>
   </div>
