--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 </div>
 
 
-<footer class="panel-footer navbar-fixed-bottom">
+<footer class="panel-footer">
   <div class="container">
     <p>&copy; Company 2019</p>
   </div>
