--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,13 @@
   </div>
 </div>
 
+<br />
+<br />
+<br />
+<br />
+<br />
 
-<footer class="panel-footer">
+<footer class="panel-footer navbar-fixed-bottom">
   <div class="container">
     <p>&copy; Company 2019</p>
   </div>
