add chapter font color

--- a/src/app/topics/topic-detail/product-edit/product-edit.component.html
+++ b/src/app/topics/topic-detail/product-edit/product-edit.component.html
@@ -29,6 +29,7 @@
                 id="id"
                 formControlName="id"
                 class="form-control"
+                readonly
               />
             </div>
           </div>
@@ -44,6 +45,7 @@
                 id="tid"
                 formControlName="tid"
                 class="form-control"
+                readonly
               />
             </div>
           </div>
