--- a/src/app/topics/topic-edit/topic-edit.component.html
+++ b/src/app/topics/topic-edit/topic-edit.component.html
@@ -31,6 +31,7 @@
                 id="id"
                 formControlName="id"
                 class="form-control"
+                readonly
               />
             </div>
           </div>
