--- a/src/app/shared/editor/editor.component.html
+++ b/src/app/shared/editor/editor.component.html
@@ -6,9 +6,9 @@
 
 
 <quill-editor
+  class="ql-editor"
   [styles]="{height: '250px'}"
   (onEditorCreated)="editorCreated($event)"
   (onContentChanged)="contentChanged($event)"
   [(ngModel)]="contentObject"
 ></quill-editor>
-
