--- a/src/app/topics/topic-detail/product-item/product-item.component.html
+++ b/src/app/topics/topic-detail/product-item/product-item.component.html
@@ -5,11 +5,13 @@
        style="cursor: pointer;">
     <a  class="thumbnail module" style="border-radius:15px; background-color: #dff0d8">
       <div class="pull-right">
-        <img
-          [src]="product.thumbnail"
-          alt="{{ product.name }}"
-          class="img-responsive"
-          style="max-height: 40px;">
+        <div class="content"
+             [innerHTML]="assembleHTML(product.thumbnail)"></div>
+        <!--<img-->
+          <!--[src]="product.thumbnail"-->
+          <!--alt="{{ product.name }}"-->
+          <!--class="img-responsive"-->
+          <!--style="max-height: 40px;">-->
       </div>
       <!--<div class="pull-left">-->
         <h4 class="list-group-item-heading">{{ product.name }}</h4>
