--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -28,16 +28,16 @@
 
   <a (click)="jumpToStep(i)">
     <span class="pull-left">
-  <img
-    [src]="i.chapter.product.thumbnail"
-    alt="{{ i.chapter.product.name }}"
-    class="img-responsive"
-    style="max-height: 20px;">
-  </span>
-    {{ i.chapter.product.topic.name }}
-    -> {{ i.chapter.product.name }}
-    -> {{ i.chapter.name }}
-    -> {{ i.name }}</a>
+      <img
+        [src]="'https://www.easyicon.net/api/resizeApi.php?id=1226777&size=128'"
+        class="img-responsive"
+        style="max-height: 20px;">
+    </span>
+    <span [innerHTML]="i.chapter.product.topic.name | highlight:keyword"></span>
+    <span [innerHTML]="i.chapter.product.name | highlight:keyword"></span>
+    <span [innerHTML]="i.chapter.name | highlight:keyword"></span>
+    <span [innerHTML]="i.name | highlight:keyword"></span>
+  </a>
   <quill-view-html
     [content]="i.content"
     format="text"
