--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,7 @@
 
 <footer class="panel-footer navbar-fixed-bottom">
   <div class="container">
-    <p>&copy; Company 2019</p>
+    <p>&copy; 2019-2022 xujiwch.com 版权所有 <a href="http://www.beian.miit.gov.cn"> 粤ICP备19077171号 </a> </p>
+
   </div>
 </footer>
