update the search component

--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -3,3 +3,11 @@ div.pageDiv{
 }
 
 a:hover{text-decoration:none}
+
+
+p {
+  max-width: 1000px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap
+}
