--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -32,16 +32,19 @@
         class="img-responsive"
         style="max-height: 20px;">
     </span>
-    <span [innerHTML]="i.chapter.product.topic.name | highlight:keyword"></span>
-    -> <span [innerHTML]="i.chapter.product.name | highlight:keyword"></span>
-    -> <span [innerHTML]="i.chapter.name | highlight:keyword"></span>
+    <span [innerHTML]="i.product.topic.name | highlight:keyword"></span>
+    -> <span [innerHTML]="i.product.name | highlight:keyword"></span>
     -> <span [innerHTML]="i.name | highlight:keyword"></span>
+    <!-- -> <span [innerHTML]="i.name | highlight:keyword"></span>-->
   </a>
-  <quill-view-html
-    [content]="i.content"
-    format="text"
-    theme="snow"
-  ></quill-view-html>
+
+  <p [innerHTML] = "i.chapter.description | highlight:keyword"></p>
+
+  <!--<quill-view-html-->
+    <!--[content]="i.content"-->
+    <!--format="text"-->
+    <!--theme="snow"-->
+  <!--&gt;</quill-view-html>-->
 </ul>
 
 
